# openhd-ground-station

./: .gitignore  README.md
configs/: blacklist-rtw88-openhd.conf  hardware.conf  networking_settings.json  openhd-sys-utils.service  wifibroadcast_settings.json
docs/: ui-architecture-v0.md  versions.md  worklog.md
ground_ui/: CMakeLists.txt  README.md
ground_ui/qml/: Main.qml
ground_ui/qml/components/: ActionButton.qml  CompassRibbon.qml  DiagnosticCard.qml  FlightTape.qml  GaugeCard.qml  HorizonOverlay.qml  NavigationBar.qml  OsdReadout.qml  StatusChip.qml  VideoCanvas.qml  WarningBanner.qml
ground_ui/qml/panels/: BottomInfoPanel.qml  LeftHudPanel.qml  MiniMapPanel.qml  RightActionPanel.qml  TopStatusBar.qml
ground_ui/qml/screens/: DiagnosticsScreen.qml  FlightScreen.qml  MessagesScreen.qml
ground_ui/qml/theme/: Colors.qml  Metrics.qml  Typography.qml
ground_ui/src/: main.cpp
ground_ui/src/app/: AppContext.cpp  AppContext.hpp  Application.cpp  Application.hpp
ground_ui/src/commands/: CameraCommands.cpp  CameraCommands.hpp  FlightCommands.cpp  FlightCommands.hpp  SystemCommands.cpp  SystemCommands.hpp
ground_ui/src/common/: types.hpp
ground_ui/src/integration/: MavlinkParser.cpp  MavlinkParser.hpp  OpenHDBackend.cpp  OpenHDBackend.hpp
ground_ui/src/models/: AlertListModel.cpp  AlertListModel.hpp  DiagnosticsModel.cpp  DiagnosticsModel.hpp  LinkModel.cpp  LinkModel.hpp  VehicleModel.cpp  VehicleModel.hpp  VideoModel.cpp  VideoModel.hpp
ground_ui/src/services/: AlertService.cpp  AlertService.hpp  DemoDataService.cpp  DemoDataService.hpp  DiagnosticsService.cpp  DiagnosticsService.hpp  LinkStateService.cpp  LinkStateService.hpp  VehicleStateService.cpp  VehicleStateService.hpp  VideoService.cpp  VideoService.hpp
ground_ui/src/video/: RtpVideoReceiver.cpp  RtpVideoReceiver.hpp  VideoFrameProvider.cpp  VideoFrameProvider.hpp
ground_ui/tests/: MavlinkParserTests.cpp  OpenHDBackendTests.cpp
scripts/: check-ground-openhd.sh  start-ground-openhd.sh
